[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/Items/Treasure Chest1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Crate_ending.gd" type="Script" id=2]
[ext_resource path="res://Font/KeyPress_Font.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 60 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 20 )

[node name="Crate" type="Node2D" groups=[
"Crate",
]]
z_index = -1

[node name="Image" type="Sprite" parent="."]
self_modulate = Color( 0.596078, 0.423529, 0.0196078, 1 )
texture = ExtResource( 1 )

[node name="InteractArea" type="Area2D" parent="Image"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Image/InteractArea"]
position = Vector2( -5.44159, 13.6037 )
shape = SubResource( 1 )

[node name="CollisionArea" type="StaticBody2D" parent="Image"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Image/CollisionArea"]
position = Vector2( -6.8017, 9.5226 )
shape = SubResource( 2 )

[node name="Z_Index" type="Node2D" parent="."]
z_index = 5
z_as_relative = false

[node name="Label" type="Label" parent="Z_Index"]
visible = false
margin_left = -39.8421
margin_top = -39.1848
margin_right = 337.158
margin_bottom = 311.815
rect_scale = Vector2( 0.085, 0.085 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.764706, 0.737255, 0.737255, 1 )
custom_constants/shadow_offset_x = -6
custom_constants/shadow_offset_y = 5
text = "E"

[connection signal="body_entered" from="Image/InteractArea" to="Image/InteractArea" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Image/InteractArea" to="Image/InteractArea" method="_on_Area2D_body_exited"]
[connection signal="opened" from="Image/InteractArea" to="Image/InteractArea" method="_on_InteractArea_opened"]
